...
            }

            Section(header: trendingTVShowsSectionHeader) {
                TVShowsCarousel(tvShows: trendingTVShows, imageType: .backdrop(displaySize: .large))
                    .listRowInsets(EdgeInsets())
                    .accessibility(label: Text("Trending TV Shows Carousel"))
                    .accessibility(identifier: "TrendingTVShowsCarousel")
            }

            Section(header: discoverTVShowsSectionHeader) {
                TVShowsCarousel(tvShows: discoverTVShows, imageType: .poster(displaySize: .medium))
                    .listRowInsets(EdgeInsets())
                    .accessibility(label: Text("Discover TV Shows Carousel"))
...
                ) {
                    Text("See more")
                        .font(.body)
                        .foregroundColor(.accentColor)
                }
                .accessibility(label: Text("See more Trending Movies"))
                .accessibility(identifier: "SeeMoreTrendingMovies")
            }
        }
        .textCase(.none)
        .foregroundColor(.primary)
    }

...
