...
            navigationSelection: $navigationSelection
        )
        .background(
            NavigationLink(destination: SearchView(), isActive: $isSearchActive) {}
        )
        .accessibility(label: Text("Home View"))
        .accessibility(identifier: "HomeView")
        .toolbar {
            ToolbarItem(placement: .primaryAction) {
                Button(action: {
                    isSearchActive = true
                }, label: {
                    Image(systemName: "magnifyingglass")
...
