...

    @ViewBuilder private var content: some View {
        if let tvShow = self.tvShow,
           let seasons = self.seasons,
           let credits = self.credits,
           let recommendations = self.recommendations {
            TVShowDetails(tvShow: tvShow, seasons: seasons, credits: credits, recommendations: recommendations)
                .transition(AnyTransition.opacity.animation(Animation.easeOut.speed(0.5)))
                .accessibility(identifier: "TVShowDetails")
        } else {
            ProgressView()
        }
    }
...
